# edgi-versionista-warc

./: .editorconfig  .gitignore  README.md  basic.py  create-log-warc.py  create_versionista_warc.py  edgi-versionista-warc.py  example.warc  example_record.json  pyproject.toml  warctools.py  web_monitoring_db.py  write_custom_warc.py
.github/workflows/: ci.yml
edgi_versionista_warc/: cli.py  versionista_warc.py  warctools.py
