[project]
name = "edgi-versionista-warc"
version = "0.1.0"
description = "Build WARCs from Versionista data in EDGI DB"
authors = [
    { name = "Rob Brackett", email = "rob@robbrackett.com" }
]
dependencies = [
    "warcio>=1.7.4",
    "httpx>=0.24.1",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "toolz>=0.12.0",
]
readme = "README.md"
requires-python = ">= 3.13.0"

[dependency-groups]
dev = [
    "ipython>=8.12.2",
    "ruff>=0.0.285",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "B", "W"]
